layout added html and css file

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 
   <!-- google font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap"
+    rel="stylesheet">
 
-<!-- favicon -->
+  <!-- favicon -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <!-- my stylesheet -->
@@ -24,9 +25,24 @@
 
 <body>
 
-
   <main>
-    
+    <div class="container">
+      <div class="card daniel">
+        this is daniel
+      </div>
+      <div class="card jonathan">
+        this is jonathan
+      </div>
+      <div class="card kira">
+        this is kira
+      </div>
+      <div class="card jeanette">
+        this is jeanette
+      </div>
+      <div class="card patrick">
+        this is patrick
+      </div>
+    </div>
   </main>
 
 </body>
