--- a/index.html
+++ b/index.html
@@ -28,20 +28,121 @@
   <main>
     <div class="container">
       <div class="card daniel">
-        this is daniel
+
+        <div class="card__profile">
+          <div class="card__picture">
+            <img src="images/image-daniel.jpg" class="card__photo" alt="profile daniel">
+          </div>
+          <div class="card__info">
+            <p class="paragraph ">Daniel Clifford</p>
+            <p class="paragraph paragraph--light paragraph--small">Verified Graduate</p>
+          </div>
+        </div>
+        <h2 class="heading heading--2">I received a job offer mid-course, and the subjects I learned were current,
+          if not more so,
+          in the company I joined. I honestly feel I got every penny’s worth.
+        </h2>
+        <p class="paragraph paragraph--lighter">“ I was an EMT for many years before I joined the bootcamp. I’ve been
+          looking
+          to make a
+          transition and have heard some people who had an amazing experience here. I signed up
+          for the free intro course and found it incredibly fun! I enrolled shortly thereafter.
+          The next 12 weeks was the best - and most grueling - time of my life. Since completing
+          the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
+        </p>
+
       </div>
+
+
       <div class="card jonathan">
-        this is jonathan
+        <div class="card__profile">
+          <div class="card__picture">
+            <img src="images/image-jonathan.jpg" class="card__photo" alt="profile daniel">
+          </div>
+          <div class="card__info">
+            <p class="paragraph ">Jonathan Walters</p>
+            <p class="paragraph paragraph--light paragraph--small">Verified Graduate</p>
+          </div>
+        </div>
+        <h2 class="heading heading--2">
+          The team was very supportive and kept me motivated
+        </h2>
+        <p class="paragraph paragraph--lighter">“ I started as a total newbie with virtually no coding skills. I now
+          work as a mobile engineer
+          for a big company. This was one of the best investments I’ve made in myself. ”
+        </p>
       </div>
+
+
       <div class="card kira">
-        this is kira
+        <div class="card__profile">
+          <div class="card__picture">
+            <img src="images/image-kira.jpg" class="card__photo" alt="profile daniel">
+          </div>
+          <div class="card__info">
+            <p class="paragraph paragraph--dark ">Kira Whittle</p>
+            <p class="paragraph paragraph--light paragraph--small paragraph--dark">Verified Graduate</p>
+          </div>
+        </div>
+        <h2 class="heading heading--2 heading--dark">
+          Such a life-changing experience. Highly recommended!
+        </h2>
+        <p class="paragraph paragraph--lighter paragraph--dark">
+          “ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from
+          professionals who can help me learn programming step by step. I was encouraged to enroll by a former
+          student of theirs who can only say wonderful things about the program. The entire curriculum and staff
+          did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team
+          project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial
+          could ever have. In fact, I’ve often referred to it during interviews as an example of my developent
+          experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers.
+          100% recommend! ”
+        </p>
       </div>
+
+
       <div class="card jeanette">
-        this is jeanette
+        <div class="card__profile">
+          <div class="card__picture">
+            <img src="images/image-jeanette.jpg" class="card__photo" alt="profile daniel">
+          </div>
+          <div class="card__info">
+            <p class="paragraph paragraph--dark "> Jeanette Harmon</p>
+            <p class="paragraph paragraph--light paragraph--dark paragraph--small">Verified Graduate</p>
+          </div>
+        </div>
+        <h2 class="heading heading--2 heading--dark">
+          An overall wonderful and rewarding experience
+        </h2>
+        <p class="paragraph paragraph--lighter paragraph--dark">
+          “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living
+          while doing something I love. ”
+        </p>
       </div>
+
+
       <div class="card patrick">
-        this is patrick
+        <div class="card__profile">
+          <div class="card__picture">
+            <img src="images/image-patrick.jpg" class="card__photo" alt="profile daniel">
+          </div>
+          <div class="card__info">
+            <p class="paragraph ">Patrick Abrams</p>
+            <p class="paragraph paragraph--light paragraph--small">Verified Graduate</p>
+          </div>
+        </div>
+        <h2 class="heading heading--2">
+          Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and
+          learning from their experiences was easy.
+        </h2>
+        <p class="paragraph paragraph--lighter">
+          “ The staff seem genuinely concerned about my progress which I find really refreshing. The program
+          gave me the confidence necessary to be able to go out in the world and present myself as a capable
+          junior developer. The standard is above the rest. You will get the personal attention you need from
+          an incredible community of smart and amazing people. ”
+        </p>
       </div>
+
+
     </div>
   </main>
 
@@ -53,56 +154,9 @@
 
 
 <!-- 
-    Daniel Clifford
-  Verified Graduate
+  
 
-  I received a job offer mid-course, and the subjects I learned were current, if not more so, 
-  in the company I joined. I honestly feel I got every penny’s worth.
+  
 
-  “ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a 
-  transition and have heard some people who had an amazing experience here. I signed up 
-  for the free intro course and found it incredibly fun! I enrolled shortly thereafter. 
-  The next 12 weeks was the best - and most grueling - time of my life. Since completing 
-  the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
-
-  Jonathan Walters
-  Verified Graduate
-
-  The team was very supportive and kept me motivated
-
-  “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer 
-  for a big company. This was one of the best investments I’ve made in myself. ”
-
-  Jeanette Harmon
-  Verified Graduate
-
-  An overall wonderful and rewarding experience
-
-  “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living 
-  while doing something I love. ”
-
-  Patrick Abrams
-  Verified Graduate
-
-  Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
-  learning from their experiences was easy.
-
-  “ The staff seem genuinely concerned about my progress which I find really refreshing. The program 
-  gave me the confidence necessary to be able to go out in the world and present myself as a capable 
-  junior developer. The standard is above the rest. You will get the personal attention you need from 
-  an incredible community of smart and amazing people. ”
-
-  Kira Whittle
-  Verified Graduate
-
-  Such a life-changing experience. Highly recommended!
-
-  “ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from 
-  professionals who can help me learn programming step by step. I was encouraged to enroll by a former 
-  student of theirs who can only say wonderful things about the program. The entire curriculum and staff 
-  did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team 
-  project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial 
-  could ever have. In fact, I’ve often referred to it during interviews as an example of my developent 
-  experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 
-  100% recommend! ”
+  
  -->
