--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="this is just a training .">
   <!-- displays site properly based on user's device -->
+
+  <link rel="noreferrer" href="">
 
   <!-- google font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -145,6 +148,12 @@
 
     </div>
   </main>
+
+  <footer>
+    <a href="https://github.com/AliRezaDavuodi" target="_blank" rel="noopener">
+      made by alireza davuodi
+    </a>
+  </footer>
 
 </body>
 
